<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/splash" />

    <Button
        android:id="@+id/btnSingle"
        style="@style/ButtonMenuNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/singleplayer" />

    <Button
        android:id="@+id/btnMultiplayer"
        style="@style/ButtonMenuNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSingle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/multiplayer" />

    <Button
        android:id="@+id/btnRules"
        style="@style/ButtonMenuNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMultiplayer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/rules_game" />

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/app_version"
        android:textColor="@color/yellow" />

</RelativeLayout>